always defined but may have the value "None" if no value is set on the
command line, state dump, or suite.rc file. The initial cycle time 
variable is automatically set in a cold start, but only optionally by a
warm start - which is really an implicit restart that does not
reference a previous state.

+ moved task "initial scripting" below cylc-defined task environment
so that suite and task identity can be used in intiial scripting.

+ Tasks that specify "enable resurrection = True" will be revived from
the dead if they start running again (by external non-cylc means) after
reporting failure. This can be used to handle HPC-style job preemption.

+ Moved the User Guide documentation of cylc version re-invocation from
the installation section to the running suites section. 

+ Correct Quick Start Guide suite names (the initial component of the
registration name hierarchy had been omitted).

+ Do remote request handling before shutdown check (reverses the
original order) so suites can shutdown if requested even when a
failing task has retries lined up with a very short delay period.

+ New config item "[cylc] abort if any task fails = False"; if True,
the suite will abort with exit status 1 if any task false. The main
intended use for this is for pre-release automated test suites.

+ Initial GUI text view task state filtering now shows all tasks, as
users often forget that some task states are filtered out if they did
not activate the filters themselves.

+ The runahead limit now waits on waiting, submitted, and running tasks
(waiting alone is not enough to contstrain a single task cycling suite,
in which successive instances all go off at once).

+ Removed the requirement to preface the integer TAG of an asynchronous
task, on the command line, with 'a:'.

+ Suites can now be restarted after task definitions have been deleted 
without manually altering the suite state dump file. Undefined tasks in
the state dump are just be ignored at start up.
