@@ -104,13 +104,13 @@ description = string( default="No description provided" )
         manual completion = boolean( default=False )
         extra log files = force_list( default=list())
         enable resurrection = boolean( default=False )
+        log directory = string( default='$HOME/cylc-run/$CYLC_SUITE_REG_NAME/log/job' )
+        share directory = string( default='$CYLC_SUITE_DEF_PATH/share' )
+        work directory = string( default='$CYLC_SUITE_DEF_PATH/work/$CYLC_TASK_ID' )
         [[[job submission]]]
             method = string( default=background )
             command template = string( default=None )
             shell = string( default='/bin/bash' )
-            log directory = string( default='$HOME/cylc-run/$CYLC_SUITE_REG_NAME/log/job' )
-            share directory = string( default='$CYLC_SUITE_DEF_PATH/share' )
-            work directory = string( default='$CYLC_SUITE_DEF_PATH/work/$CYLC_TASK_ID' )
         [[[remote]]]
             host = string( default=None )
             owner = string( default=None )
@@ -146,13 +146,13 @@ description = string( default="No description provided" )
         manual completion = boolean( default=None )
         extra log files = force_list( default=list())
         enable resurrection = boolean( default=None )
+        log directory = string( default=None )
+        share directory = string( default=None )
+        work directory = string( default=None )
         [[[job submission]]]
             method = string( default=None )
             command template = string( default=None )
             shell = string( default=None )
-            log directory = string( default=None )
-            share directory = string( default=None )
-            work directory = string( default=None )
         [[[remote]]]
             host = string( default=None )
             owner = string( default=None )
